--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,4 +1,4 @@
-.header{
+.header {
     background: var(--gray-700);
     display: flex;
     justify-content: center;
@@ -7,25 +7,24 @@
     font-weight: 700;
 }
 
-.header .logo{
+.header .logo {
     display: flex;
     justify-content: center;
-    height: 126px;
-    width: 148px;
-    margin:5rem 0;
+    width: 9.25rem;
+    margin: 5rem 0;
 }
 
 .header img {
     height: 2.5rem;
     width: 1.37rem;
-    margin-right: 12px;
+    margin-right: 0.75rem;
 }
 
 .header .to {
     color: var(--blue);
 }
 
-.header .do{
+.header .do {
     color: var(--purple);
 
 }
