--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -1,6 +1,6 @@
 .newTask {
     display: flex;
-    /* flex-direction: column; */
+    width: 100%;
     align-items: center;
     justify-content: center;
     margin-top: calc(0px - 1.5rem - 6px);
@@ -8,7 +8,7 @@
 
 .newTask input {
     height: 3.37rem;
-    width: 39.87rem;
+    width: 100%;
     padding: 1rem;
     background: var(--gray-500);
     border: 1px solid var(--gray-700);
@@ -21,7 +21,7 @@
     outline: 2px solid var(--blue);
 }
 
-.newTask button {
+.newTask button[type=submit] {
     height: 3.25rem;
     padding: 1rem;
     margin-left: 8px;
@@ -35,9 +35,19 @@
     align-items: center;
     justify-content: center;
 
-    gap: 0.75rem;
+    gap: 0.5rem;
 
     transition: color 0.2s, background-color 0.2s;
+}
+
+.newTask button[type=submit]:not(:disabled):hover {
+    background-color: var(--blue);
+}
+
+.newTask button:disabled {
+    background-color: var(--gray-500);
+    color: var(--gray-300);
+    cursor: not-allowed;
 }
 
 .newTask button span {
@@ -45,9 +55,6 @@
     font-weight: bold;
 }
 
-.newTask button:hover {
-    background-color: var(--blue);
-}
 
 .tasks {
     display: flex;
@@ -61,19 +68,19 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 736px;
+    width: 100%;
     font-weight: bold;
     font-size: 14px;
 }
 
 .info span {
     display: inline-block;
-    height: 19px;
-    font-size: 12px;
+    font-size: 0.75rem;
     background: var(--gray-400);
     color: var(--gray-200);
-    border-radius: 999px;
+    border-radius: 1rem;
     padding: 3px 8px;
+    margin: 3px 8px;
 }
 
 .info .counterCreated {
@@ -85,11 +92,10 @@
 }
 
 .taskList {
-    width: 736px;
-    height: 244px;
+    width: 100%;
     margin-top: 1.5rem;
-    font-size: 16px;
-    color: var(--gray-300);
+    font-size: 1rem;
+    color: var(--gray-300);    
 
     display: flex;
     flex-direction: column;
@@ -99,10 +105,9 @@
 }
 
 .empty {
-    width: 736px;
-    height: 244px;
+    width: 100%;
     border-top: 1px solid var(--gray-400);
-    font-size: 16px;
+    font-size: 1rem;
     color: var(--gray-300);
 
     display: flex;
@@ -119,66 +124,4 @@
 .empty strong {
     font-weight: bold;
 
-}
-
-.task {
-    display: flex;
-    justify-content: space-between;
-    background-color: var(--gray-500);
-    padding: 1rem 0 1rem 0;
-    border: 1px solid var(--gray-400);
-    border-radius: 8px;
-    font-size: 14px;
-    width: 100%;
-    margin-bottom: 0.75rem;
-}
-
-.task input {
-    position: absolute;
-    cursor: pointer;
-    height: 17.45px;
-    width: 17.45px;
-    outline: none;
-    margin-left: 1rem;
-}
-
-.task strong {
-    display: inline-block;
-    margin-left: 3.25rem;
-    height: 100%;
-    width: 632px;
-    font-weight: normal;
-}
-
-.textTaskDone {
-    color: var(--gray-300);
-    text-decoration: line-through;
-}
-
-.textTaskToDo {
-    color: var(--gray-100);
-}
-
-.textTaskToDo:hover  {
-    color: var(--gray-200);
-}
-
-.task button {
-    height: 24px;
-    width: 24px;
-    margin-right: 1rem;
-    background: transparent;
-    border: none;
-    border-radius: 8px;
-    color: var(--gray-300);
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
-
-}
-
-.task button:hover {
-    color: var(--purple);
 }
