--- a/src/global.css
+++ b/src/global.css
@@ -2,12 +2,12 @@
     --blue-dark: #1e6f9f;
     --blue: #4ea8de;
     --purple: #828afa;
-    
+
     --gray-100: #f2f2f2;
     --gray-200: #d9d9d9;
     --gray-300: #808080;
-    --gray-400:#333333;
-    --gray-500:#262626;
+    --gray-400: #333333;
+    --gray-500: #262626;
     --gray-600: #1a1a1a;
     --gray-700: #0d0d0d;
 
@@ -26,9 +26,11 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
-body, input, textarea, button {
+body,
+input,
+textarea,
+button {
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     font-size: 1rem;
 }
-
